<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>world.bentobox</groupId>
    <artifactId>border</artifactId>
    <version>${revision}</version>
    <packaging>jar</packaging>

    <name>Border</name>

    <description>World border for islands</description>

    <url>https://github.com/BentoBoxWorld/Border</url>
    <inceptionYear>2019</inceptionYear>

    <scm>
        <connection>scm:git:https://github.com/BentoBoxWorld/Border.git</connection>
        <developerConnection>scm:git:git@github.com:BentoBoxWorld/Border.git</developerConnection>
        <url>https://github.com/BentoBoxWorld/Border</url>
    </scm>

    <ciManagement>
        <system>jenkins</system>
        <url>https://ci.codemc.org/job/BentoBoxWorld/job/Border</url>
    </ciManagement>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/BentoBoxWorld/Border/issues</url>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>bentoboxworld</id>
            <url>https://repo.codemc.org/repository/bentoboxworld/</url>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
        <junit.version>5.10.2</junit.version>
        <mockito.version>5.11.0</mockito.version>
        <!-- More visible way how to change dependency versions -->
        <paper.version>1.21.11-R0.1-SNAPSHOT</paper.version>
        <bentobox.version>3.10.0</bentobox.version>
        <!-- Revision variable removes warning about dynamic version -->
        <revision>${build.version}-SNAPSHOT</revision>
        <!-- This allows to change between versions and snapshots. -->
        <build.version>4.8.1</build.version>
        <build.number>-LOCAL</build.number>
        <!-- Sonar Cloud -->
        <sonar.projectKey>BentoBoxWorld_Border</sonar.projectKey>
        <sonar.organization>bentobox-world</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>

    <!-- Profiles will allow to automatically change build version. -->
    <profiles>
        <profile>
            <!-- ci profile is activated if exist environment variable BUILD_NUMBER. -->
            <!-- It replaces ${build.number} that is currently '-LOCAL' with 
                correct build number from JENKINS machine. -->
            <id>ci</id>
            <activation>
                <property>
                    <name>env.BUILD_NUMBER</name>
                </property>
            </activation>
            <properties>
                <!-- Override only if necessary -->
                <build.number>-b${env.BUILD_NUMBER}</build.number>
            </properties>
        </profile>
        <profile>
            <!-- Master profile is activated if exist environment variable 
                GIT_BRANCH and its value is origin/master. -->
            <!-- It will replace 'revision' with '${build.version}' so it 
                removes '-SNAPSHOT' string at the end. -->
            <!-- Also, as this is release build, build number can be set 
                to empty string. -->
            <!-- This profile will be used only if exist environment variable 
                GIT_BRANCH with value origin/master. -->
            <id>master</id>
            <activation>
                <property>
                    <name>env.GIT_BRANCH</name>
                    <value>origin/master</value>
                </property>
            </activation>
            <properties>
                <!-- Override only if necessary -->
                <revision>${build.version}</revision>
                <!-- Empties build number variable. -->
                <build.number></build.number>
            </properties>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
          <id>papermc</id>
          <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>bentoboxworld</id>
            <url>https://repo.codemc.org/repository/bentoboxworld/</url>
        </repository>
        <repository>
            <id>codemc</id>
            <url>https://repo.codemc.org/repository/maven-snapshots/</url>
        </repository>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.github.MockBukkit</groupId>
            <artifactId>MockBukkit</artifactId>
            <version>v1.21-SNAPSHOT</version>
            <scope>test</scope>
         </dependency>
        <dependency>
          <groupId>io.papermc.paper</groupId>
          <artifactId>paper-api</artifactId>
          <version>${paper.version}</version>
          <scope>provided</scope>
        </dependency>

       <!-- Mockito (Unit testing) -->
        <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>world.bentobox</groupId>
            <artifactId>bentobox</artifactId>
            <version>${bentobox.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- By default ${revision} is ${build.version}-SNAPSHOT -->
        <!-- If GIT_BRANCH variable is set to origin/master, then it will 
            be only ${build.version}. -->

        <!-- By default ${build.number} is -LOCAL. -->
        <!-- If the BUILD_NUMBER variable is set, then it will be -b[number]. -->
        <!-- If GIT_BRANCH variable is set to origin/master, then it will 
            be the empty string. -->
        <finalName>${project.name}-${revision}${build.number}</finalName>

        <defaultGoal>clean package</defaultGoal>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources/locales</directory>
                <targetPath>./locales</targetPath>
                <filtering>false</filtering>
                <includes>
                    <include>*.yml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.5.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <release>${java.version}</release>
                    <fork>true</fork>
                    <compilerArgs>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <argLine>
                        ${argLine}
                        -XX:+EnableDynamicAgentLoading
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.math=ALL-UNNAMED
                        --add-opens java.base/java.io=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens
                        java.base/java.util.stream=ALL-UNNAMED
                        --add-opens java.base/java.text=ALL-UNNAMED
                        --add-opens
                        java.base/java.util.regex=ALL-UNNAMED
                        --add-opens
                        java.base/java.nio.channels.spi=ALL-UNNAMED
                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens java.base/java.net=ALL-UNNAMED
                        --add-opens
                        java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens java.base/sun.nio.fs=ALL-UNNAMED
                        --add-opens java.base/sun.nio.cs=ALL-UNNAMED
                        --add-opens java.base/java.nio.file=ALL-UNNAMED
                        --add-opens
                        java.base/java.nio.charset=ALL-UNNAMED
                        --add-opens
                        java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens
                        java.logging/java.util.logging=ALL-UNNAMED
                        --add-opens java.base/java.lang.ref=ALL-UNNAMED
                        --add-opens java.base/java.util.jar=ALL-UNNAMED
                        --add-opens java.base/java.util.zip=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.1.4</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.4</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.14</version>
                <configuration>
                    <append>true</append>
                    <excludes>
                        <!-- This is required to prevent Jacoco from adding 
                            synthetic fields to a JavaBean class (causes errors in testing) -->
                        <exclude>**/*Names*</exclude>
                        <!-- Prevents the Material is too large to mock error -->
                        <exclude>org/bukkit/Material*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <formats>
                                <format>XML</format>
                            </formats>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
